--- a/ElectricityBillingSystem.API/appsettings.json
+++ b/ElectricityBillingSystem.API/appsettings.json
@@ -9,6 +9,14 @@
     "Audience": "Audience",
     "ExpiryMinutes": 60
   },
+  "Twilio": {
+    "AccountSid": "your_account_sid",
+    "AuthToken": "your_auth_token"
+  },
+  "AWS": {
+    "Region": "us-east-1",
+    "SQSQueueUrl": "https://sqs.us-east-1.amazonaws.com/123456789012/MyQueue" // Replace with your SQS queue URL
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
